# DCA

./: CMakeLists.txt
applications/analysis/: CMakeLists.txt
applications/dca/: CMakeLists.txt  main_dca.cpp
build-aux/: cades_load_modules.sh  cori.cmake  cori_load_modules.sh  daint_gpu.cmake  daint_gpu_load_modules.sh  daint_load_modules.sh  rostam.cmake  rostam_modules.sh  run_dca.sh  summit.cmake  summit_load_modules.sh  summit_load_modules_hpx.sh  summit_load_modules_hpx_gcc8.sh  summit_load_modules_hpx_netliblapack.sh  summit_load_modules_hpx_openblas.sh  summit_netlibpack.cmake  summit_openblas.cmake  wombat.cmake  wombat_load_modules.sh
cmake/: FindMKL.cmake  dca_compiler_options.cmake  dca_config.cmake  dca_cuda.cmake  dca_external_libs.cmake  dca_hpx.cmake  dca_mpi.cmake  dca_testing.cmake
include/dca/config/: analysis.hpp.in  cluster_solver_check.hpp.in  dca.hpp.in  hpx_defines.hpp.in  threading.hpp.in
include/dca/function/: function.hpp  set_to_zero.hpp
include/dca/io/json/json_parser/: json_character_mapper.hpp  json_parser.hpp  whatever.hpp
include/dca/linalg/: matrix.hpp
include/dca/linalg/util/: memory.hpp
include/dca/linalg/util/allocators/: aligned_allocator.hpp
include/dca/math/geometry/tetrahedron_mesh/: tetrahedron_mesh.hpp
include/dca/math/nfft/: dnfft_1d.hpp
include/dca/parallel/hpx/: hpx.hpp  hpxthread.hpp
include/dca/parallel/hpx/hpx_thread_pool/: affinity.hpp  thread_pool.hpp
include/dca/parallel/mpi_concurrency/: mpi_collective_max.hpp  mpi_collective_min.hpp  mpi_collective_sum.hpp  mpi_concurrency.hpp  mpi_gather.hpp  mpi_initializer.hpp  mpi_packing.hpp  mpi_processor_grouping.hpp  mpi_type_map.hpp
include/dca/parallel/stdthread/: stdthread.hpp
include/dca/parallel/stdthread/thread_pool/: thread_pool.hpp
include/dca/parallel/util/: call_once_per_loop.hpp  get_workload.hpp
include/dca/phys/dca_algorithms/: compute_greens_function.hpp
include/dca/phys/dca_data/: dca_data.hpp
include/dca/phys/dca_loop/: dca_loop.hpp
include/dca/phys/dca_step/symmetrization/: symmetrize_single_particle_function.hpp
include/dca/phys/domains/cluster/: cluster_operations.hpp
include/dca/phys/parameters/: mci_parameters.hpp
include/dca/profiling/events/: time.hpp
include/dca/util/: print_type.hpp
libs/simplex_gm_rule/: CMakeLists.txt
src/distribution/: dist_types.cpp
src/io/hdf5/: CMakeLists.txt  hdf5_reader.cpp  hdf5_writer.cpp
src/io/json/: json_reader.cpp
src/io/json/json_parser/: json_character_mapper.cpp
src/linalg/blas/: CMakeLists.txt
src/parallel/: CMakeLists.txt
src/parallel/hpx/: CMakeLists.txt  hpxthread.cpp
src/parallel/hpx/hpx_thread_pool/: hpx_thread_pool.cpp
src/parallel/mpi_concurrency/: CMakeLists.txt  mpi_collective_sum.cpp  mpi_gang.cpp  mpi_initializer.cpp  mpi_processor_grouping.cpp
src/parallel/stdthread/: CMakeLists.txt
src/parallel/stdthread/thread_pool/: affinity.cpp  thread_pool.cpp
src/phys/dca_step/cluster_mapping/coarsegraining/: tetrahedron_routines_harmonic_function.cpp
src/phys/dca_step/cluster_solver/: CMakeLists.txt
src/phys/dca_step/cluster_solver/shared_tools/: CMakeLists.txt
src/phys/domains/time_and_frequency/: frequency_exchange_domain.cpp
src/profiling/: CMakeLists.txt
test/integration/cluster_solver/ss_ct_hyb/: CMakeLists.txt  NiO_no_change_test.cpp
test/integration/cluster_solver/stdthread_qmci/: CMakeLists.txt  stdthread_ctaux_tp_test.cpp
test/integration/cluster_solver/stdthread_qmci/gpu/: CMakeLists.txt  stdthread_ctaux_gpu_tp_test.cpp
test/integration/coarsegraining/: CMakeLists.txt  coarsegraining_test.cpp  input_singleband.json
test/integration/exact_diagonalization_advanced/: CMakeLists.txt  ed_cluster_solver_four_site_test.cpp  ed_cluster_solver_single_site_test.cpp
test/integration/nfft/: CMakeLists.txt
test/integration/parallel/mpi_concurrency/: CMakeLists.txt
test/integration/phys/lattice_mapping/: CMakeLists.txt  lattice_mapping_sp_test.cpp
test/integration/statistical_tests/real_materials/: CMakeLists.txt  NiO_stattest.cpp
test/integration/statistical_tests/square_lattice/: CMakeLists.txt  ctaux_square_lattice_verification_stattest.cpp  square_lattice_setup.hpp
test/performance/phys/ctaux/: ctaux_walker_performance_test.cpp
test/system-level/analysis/dca_pp_up_down_full/: CMakeLists.txt  analysis_dca_pp_up_down_full_test.cpp
test/system-level/analysis/dca_pp_up_down_sym/: CMakeLists.txt  analysis_dca_pp_up_down_sym_test.cpp
test/system-level/analysis/dcaplus_pp_up_down_full/: CMakeLists.txt  analysis_dcaplus_pp_up_down_full_test.cpp
test/system-level/analysis/dcaplus_pp_up_down_sym/: CMakeLists.txt  analysis_dcaplus_pp_up_down_sym_test.cpp
test/system-level/dca/: CMakeLists.txt  dca_sp_DCA+_hpx_test.cpp  dca_sp_DCA+_mpi_cuda_test.cpp  dca_sp_DCA+_thread_test.cpp
test/unit/function/: CMakeLists.txt
test/unit/linalg/: CMakeLists.txt  matrixop_complex_cpu_test.cpp
test/unit/linalg/util/: CMakeLists.txt
test/unit/math/function_transform/: CMakeLists.txt
test/unit/math/nfft/: CMakeLists.txt
test/unit/parallel/: CMakeLists.txt
test/unit/parallel/hpxthread/: CMakeLists.txt  hpxthread_test.cpp
test/unit/parallel/hpxthread/hpx_thread_pool/: CMakeLists.txt  hpxaffinity_test.cpp  hpxthread_pool_test.cpp
test/unit/parallel/mpi_concurrency/: CMakeLists.txt
test/unit/parallel/stdthread/: CMakeLists.txt
test/unit/parallel/stdthread/thread_pool/: CMakeLists.txt  thread_pool_test.cpp
test/unit/parallel/util/: CMakeLists.txt  call_once_per_loop_test.cpp
test/unit/phys/dca_algorithms/: CMakeLists.txt  compute_free_greens_function_test.cpp  compute_greens_function_test.cpp
test/unit/phys/dca_step/cluster_solver/shared_tools/accumulation/tp/: CMakeLists.txt  tp_accumulator_gpu_test.cpp  tp_accumulator_particle_hole_test.cpp  tp_accumulator_singleband_gpu_test.cpp  tp_accumulator_singleband_test.cpp  tp_accumulator_test.cpp
test/unit/phys/dca_step/cluster_solver/shared_tools/accumulation/tp/ndft/: CMakeLists.txt
test/unit/phys/dca_step/symmetrization/: CMakeLists.txt  symmetrize_test.cpp
(+43 files in other folders)
